# bbgun

./: Cargo.toml  Justfile  README.md
src/: lib.rs
tests/: test1.rs
