[package]
name = "bbgun"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A builder for builders running builders!"
homepage = "https://github.com/astroorbis/bbgun"
repository = "https://github.com/astroorbis/bbgun"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["extra-traits"] }
